# ledger-server

./: AGENTS.md  AGENT_CHANGELOG.md  AGENT_PENDING_CLARIFICATION.md  GEMINI.md  business_logic.md  pyproject.toml
app/: .env.example  app_lifespan.py  main.py
app/api/v1/: router.py
app/api/v1/account_transactions/: account_transactions_controller.py  account_transactions_router.py
app/api/v1/accounts/: accounts_controller.py  accounts_router.py
app/api/v1/branches/: branches_controller.py  branches_router.py
app/api/v1/businesses/: businesses_controller.py  businesses_router.py
app/api/v1/entries/: entries_controller.py  entries_router.py
app/api/v1/examples/: examples_controller.py
app/api/v1/exits/: exits_controller.py  exits_router.py
app/api/v1/journal_entries/: journal_entries_controller.py  journal_entries_router.py
app/api/v1/units/: units_controller.py  units_router.py
app/api/v1/users/: users_controller.py  users_router.py
app/config/: onion-config.toml
app/core/: services_initializer.py
app/core/ledge/: batch_ledge_manager.py  db_transactions.py  ledge_manager.py
app/repos/v1/account_balances/: __init__.py  account_balances_repository.py
app/repos/v1/account_transactions/: __init__.py  account_transactions_repository.py
app/repos/v1/accounts/: accounts_repository.py
app/repos/v1/branches/: __init__.py  branches_repository.py
app/services/: __init__.py  mongo_service.py
app/tools/: __init__.py  time_tools.py
scripts/http_client/: crud.py
scripts/mongo_settings/: docker-compose.yaml  init_replica.py
(+23 files in other folders)
