[project]
name = "ledger-server"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "motor>=3.7.1",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "onion",
    "pytest-asyncio>=1.3.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "ty>=0.0.32",
]

[tool.uv.sources]
onion = { git = "https://github.com/NathanDraco22/onion-cli.git" }

[tool.ty.environment]
extra-paths = [
    "./app",
    ".venv/Lib/site-packages"
]
